// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/NavBar Basic 1`] = `
<div
  data-css-tuvdh3=""
>
  <div
    data-css-1qn6dtd=""
  >
    <span
      data-css-ruxays=""
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
      >
        <button
          data-css-167upi1=""
          onClick={[Function]}
        >
          <span
            data-css-50rv4t=""
          >
            <span
              data-css-1009u4g=""
            >
              <div
                className="psds-icon psds-icon--size-medium"
              >
                <svg
                  aria-label="menu icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    clipRule="evenodd"
                    d="M22 11.5v1a.5.5 0 01-.5.5h-19a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h19a.5.5 0 01.5.5zM2.5 17h18.98a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H2.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5zm0-12h18.977a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H2.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5z"
                    fillRule="evenodd"
                  />
                </svg>
              </div>
            </span>
          </span>
        </button>
      </div>
      <div
        data-css-1pig4yn=""
      />
    </span>
  </div>
  <div
    data-css-1kfsc44=""
  >
    <div
      data-css-v7pgy0=""
    >
      Brand
    </div>
  </div>
  <div
    data-css-1ns9ldv=""
  >
    <div
      data-css-v7pgy0=""
    >
      Items
    </div>
  </div>
  <div
    data-css-jgr69u=""
  >
    <div
      data-css-v7pgy0=""
    >
      Utility
    </div>
  </div>
  <div>
    <div
      data-css-v7pgy0=""
    >
      User
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NavBar Desktop Only 1`] = `
<div
  data-css-tuvdh3=""
>
  <div
    data-css-1kfsc44=""
  >
    <div
      data-css-v7pgy0=""
    >
      Brand
    </div>
  </div>
  <div
    data-css-1ns9ldv=""
  >
    <div
      data-css-v7pgy0=""
    >
      Items
    </div>
  </div>
  <div
    data-css-jgr69u=""
  >
    <div
      data-css-v7pgy0=""
    >
      Utility
    </div>
  </div>
  <div>
    <div
      data-css-v7pgy0=""
    >
      User
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NavBar Example Skills 1`] = `
<div
  data-css-tuvdh3=""
>
  <div
    data-css-1qn6dtd=""
  >
    <span
      data-css-ruxays=""
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
      >
        <button
          data-css-167upi1=""
          onClick={[Function]}
        >
          <span
            data-css-50rv4t=""
          >
            <span
              data-css-1009u4g=""
            >
              <div
                className="psds-icon psds-icon--size-medium"
              >
                <svg
                  aria-label="menu icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    clipRule="evenodd"
                    d="M22 11.5v1a.5.5 0 01-.5.5h-19a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h19a.5.5 0 01.5.5zM2.5 17h18.98a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H2.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5zm0-12h18.977a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H2.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5z"
                    fillRule="evenodd"
                  />
                </svg>
              </div>
            </span>
          </span>
        </button>
      </div>
      <div
        data-css-1pig4yn=""
      />
    </span>
  </div>
  <div
    data-css-1kfsc44=""
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
    >
      <div
        data-css-1yi1k4r=""
      >
        <div
          data-css-1yppk9l=""
        >
          <svg
            aria-hidden={true}
            viewBox="0 0 32 32"
          >
            <defs>
              <linearGradient
                gradientUnits="userSpaceOnUse"
                id="skills-gradient"
                x1="45.6377"
                x2="-32.2436"
                y1="47.4727"
                y2="-35.2537"
              >
                <stop
                  offset="0.03"
                  stopColor="#F05A28"
                />
                <stop
                  offset="0.93"
                  stopColor="#EB008B"
                />
              </linearGradient>
            </defs>
            <path
              d="M0 0V32H32V0H0ZM9.4053 12.7438L15.088 16L9.4053 19.287V12.7438ZM9.4053 24.8503V21.6468L19.1842 16L9.4053 10.3532V7.17166L24.6955 16L9.4053 24.8503Z"
              fill="url(#skills-gradient)"
            />
          </svg>
        </div>
        <div
          data-css-1b9xv68=""
        >
          SKILLS
        </div>
      </div>
    </div>
  </div>
  <div
    data-css-1ns9ldv=""
  >
    <div
      data-css-1gxezh7=""
    >
      <span
        data-css-ruxays=""
      >
        <div
          className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
        >
          <button
            data-css-167upi1=""
          >
            <span
              data-css-50rv4t=""
            >
              <span
                data-css-1o9ctb7=""
              >
                <div
                  className="psds-icon psds-icon--size-medium"
                >
                  <svg
                    aria-label="home icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      clipRule="evenodd"
                      d="M21 13.417l.989.988a.5.5 0 00.707 0l.707-.708a.5.5 0 000-.707L12.353 1.954a.5.5 0 00-.707 0L.61 12.99a.5.5 0 000 .707l.707.707a.5.5 0 00.707 0L3 13.428v7.573a1 1 0 001 1h5a1 1 0 001-1v-4a2 2 0 114 0v4a1 1 0 001 1h5a1 1 0 001-1v-7.584zM5 11.428l7-7 7 6.991v8.582h-3v-3a4 4 0 10-8 0v3H5v-8.573z"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
              </span>
              <span
                data-css-1c3u483=""
              >
                Home
              </span>
            </span>
          </button>
        </div>
        <div
          data-css-1pig4yn=""
        />
      </span>
    </div>
    <div
      data-css-w0yocm=""
    >
      <div>
        <span
          data-css-ruxays=""
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
          >
            <button
              data-css-8y1zv3=""
              onClick={[Function]}
            >
              <span
                data-css-5vea0s=""
              >
                <span
                  data-css-1o9ctb7=""
                >
                  <div
                    className="psds-icon psds-icon--size-medium"
                  >
                    <svg
                      aria-label="browse icon"
                      role="img"
                      viewBox="0 0 24 24"
                    >
                      <path
                        clipRule="evenodd"
                        d="M3 9h18a1 1 0 011 1v10a1 1 0 01-1 1H3a1 1 0 01-1-1V10a1 1 0 011-1zm1 2v8h16v-8H4zm1-5h14a1 1 0 011 1v1H4V7a1 1 0 011-1zm3-3h8a1 1 0 011 1v1H7V4a1 1 0 011-1z"
                        fillRule="evenodd"
                      />
                    </svg>
                  </div>
                </span>
                <span
                  data-css-1c3u483=""
                >
                  Browse
                </span>
                <span
                  data-css-1cbyl54=""
                >
                  <div
                    className="psds-icon psds-icon--size-small"
                  >
                    <svg
                      aria-label="caret down icon"
                      role="img"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                      />
                    </svg>
                  </div>
                </span>
              </span>
            </button>
          </div>
          <div
            data-css-1qafynz=""
          />
        </span>
      </div>
      <div
        style={
          Object {
            "visibility": "hidden",
          }
        }
      />
    </div>
  </div>
  <div
    data-css-jgr69u=""
  >
    <div
      data-css-1gxezh7=""
    >
      <span
        data-css-ruxays=""
      >
        <div
          className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
        >
          <button
            data-css-167upi1=""
          >
            <span
              data-css-50rv4t=""
            >
              <span
                data-css-1009u4g=""
              >
                <div
                  className="psds-icon psds-icon--size-medium"
                >
                  <svg
                    aria-label="notifications icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      clipRule="evenodd"
                      d="M19.6 16.1c-1-1-1.2-3-1.2-4.1V9.9c0-2.8-1.9-5.2-4.4-6.1-.1-1-1-1.8-2-1.8s-1.9.8-2 1.8c-2.5.9-4.4 3.3-4.4 6.1v2.2c0 1.1-.2 3.1-1.2 4.1-.3.1-.4.4-.4.7 0 .6.5 1.1 1.1 1.1H19c.6 0 1.1-.5 1.1-1.1-.1-.3-.2-.6-.5-.8zM6.8 16c.573-1.146.69-2.566.786-3.736L7.6 12.1V9.9c0-2.4 2-4.4 4.4-4.4 2.4 0 4.4 2 4.4 4.4v2.2c0 1.2.2 2.6.8 3.9H6.8zm8.2 3c0 1.7-1.3 3-3 3s-3-1.3-3-3h6z"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
              </span>
            </span>
          </button>
        </div>
        <div
          data-css-1pig4yn=""
        />
      </span>
    </div>
    <div
      data-css-w0yocm=""
    >
      <span
        data-css-ruxays=""
      >
        <div
          className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
        >
          <button
            data-css-167upi1=""
          >
            <span
              data-css-50rv4t=""
            >
              <span
                data-css-1009u4g=""
              >
                <div
                  className="psds-icon psds-icon--size-medium"
                >
                  <svg
                    aria-label="account icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 2c1.103 0 2 .898 2 2v16c0 1.103-.897 2-2 2H4c-1.103 0-2-.897-2-2V4c0-1.102.897-2 2-2h16zm-4 18h4.001L20 4h-4v3h-2V4h-4v8H8V4H4v16h4v-3h2v3h4v-8h2v8zM6 13h6v3H6v-3zm6-5h6v3h-6V8z"
                    />
                  </svg>
                </div>
              </span>
            </span>
          </button>
        </div>
        <div
          data-css-1pig4yn=""
        />
      </span>
    </div>
  </div>
  <div>
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
    >
      <button
        className="psds-navuser psds-navuser--clickable"
        onClick={[Function]}
      >
        <div
          className="psds-avatar psds-avatar--size-xsmall"
        >
          <div
            aria-label="Jake"
            className="psds-avatar__initials"
            style={
              Object {
                "backgroundColor": "#008F46",
              }
            }
          >
            J
          </div>
        </div>
        <div
          className="psds-navuser__words"
        >
          <div
            className="psds-navuser__name"
          >
            Jake
          </div>
          <div
            className="psds-navuser__plan-name"
          >
            Accenture
          </div>
        </div>
      </button>
    </div>
    <div
      style={
        Object {
          "visibility": "hidden",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Components/NavBar With Skills Brand 1`] = `
<div
  data-css-tuvdh3=""
>
  <div
    data-css-1qn6dtd=""
  >
    <span
      data-css-ruxays=""
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
      >
        <button
          data-css-167upi1=""
          onClick={[Function]}
        >
          <span
            data-css-50rv4t=""
          >
            <span
              data-css-1009u4g=""
            >
              <div
                className="psds-icon psds-icon--size-medium"
              >
                <svg
                  aria-label="menu icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    clipRule="evenodd"
                    d="M22 11.5v1a.5.5 0 01-.5.5h-19a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h19a.5.5 0 01.5.5zM2.5 17h18.98a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H2.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5zm0-12h18.977a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H2.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5z"
                    fillRule="evenodd"
                  />
                </svg>
              </div>
            </span>
          </span>
        </button>
      </div>
      <div
        data-css-1pig4yn=""
      />
    </span>
  </div>
  <div
    data-css-1kfsc44=""
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
    >
      <div
        data-css-1yi1k4r=""
      >
        <div
          data-css-1yppk9l=""
        >
          <svg
            aria-hidden={true}
            viewBox="0 0 32 32"
          >
            <defs>
              <linearGradient
                gradientUnits="userSpaceOnUse"
                id="skills-gradient"
                x1="45.6377"
                x2="-32.2436"
                y1="47.4727"
                y2="-35.2537"
              >
                <stop
                  offset="0.03"
                  stopColor="#F05A28"
                />
                <stop
                  offset="0.93"
                  stopColor="#EB008B"
                />
              </linearGradient>
            </defs>
            <path
              d="M0 0V32H32V0H0ZM9.4053 12.7438L15.088 16L9.4053 19.287V12.7438ZM9.4053 24.8503V21.6468L19.1842 16L9.4053 10.3532V7.17166L24.6955 16L9.4053 24.8503Z"
              fill="url(#skills-gradient)"
            />
          </svg>
        </div>
        <div
          data-css-1b9xv68=""
        >
          SKILLS
        </div>
      </div>
    </div>
  </div>
  <div
    data-css-1ns9ldv=""
  >
    <div
      data-css-v7pgy0=""
    >
      Items
    </div>
  </div>
  <div
    data-css-jgr69u=""
  >
    <div
      data-css-v7pgy0=""
    >
      Utility
    </div>
  </div>
  <div>
    <div
      data-css-v7pgy0=""
    >
      User
    </div>
  </div>
</div>
`;
